# meritscore

./: .gitignore  API_DOCUMENTATION.md  CLAUDE.md  CONTRIBUTING.md  CP6-WORKFLOW-IMPROVEMENTS.md  DEPLOYMENT_ARCHITECTURE.md  Dockerfile  KEEPERHUB-FEEDBACK.md  LICENSE  LINT_AUDIT_REPORT.md  MOCK_MODE_TRANSITION_PLAN.md  README.md  SECURITY_CHECKLIST.md  SESSION_COMPLETION_REPORT.md  SUBMISSION_MANIFEST.md  SWORD1-VALIDATION.md  TEST_COVERAGE_SUMMARY.md  docker-compose.yml  foundry.toml  pyproject.toml  test_0g_discovery.py
contracts/src/: Counter.sol  EvidenceRegistry.sol  MeritCore.sol  MeritVault.sol
deployments/: addresses.json
python/bff/: __init__.py  analyzer.py  attestation.py  chain.py  main.py  ollama_client.py  sandwich_detector.py  workflow.py
python/merit_scorer/: __init__.py
python/tests/: test_bff_smoke.py
python/ui/: app.jsx  index.html
scripts/: deposit_0g_ledger.py  setup_0g_ledger.py  test_0g_direct.py
